<resources>
    <string name="app_name">RecipeMvP</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="login_desc">Masuk dengan menggunakan email dan password anda. Jika anda belum memiliki akun, anda bisa mendaftar.</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_pass">Carefully type your password</string>
    <string name="register">Register</string>
    <string name="register_desc">Please fill all forms below and password must be eight characters or more</string>
    <string name="hint_name">Full name</string>
    <string name="title_activity_recipe">Recipe</string>
    <string name="hint_title">What\'s food</string>
    <string name="hint_content">Description</string>
    <string name="action_delete">Delete</string>
    <string name="action_logout">Logout</string>
</resources>